--- a/Новая папка/index.html
+++ b/Новая папка/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta c++harset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
-  <link rel="stylesheet" href="./мага.css">
+  <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./adaptive.css">  
   <title>Document</title>
 </head>
